ghc-4335c07/testsuite/tests/module/mod132.stderr

mod132.hs:6:7: error:
    • Data constructor not in scope: Foo
    • Perhaps you meant variable ‘foo’ (line 6)
