ghc-4335c07/testsuite/tests/module/mod132.hs
-- !!! dcon hiding (in the presence of identically named tycon.)
-- (test contributed by Ross Paterson.)
module M where
import Mod132_B

foo = Foo
